# axum-api-web

./: Cargo.toml  README.md
.cargo/: config.toml
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
src/: config.rs  error.rs  main.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/log/: mod.rs
src/model/: base.rs  error.rs  mod.rs  task.rs
src/model/store/: mod.rs
src/web/: mw_auth.rs  routes_static.rs
web-folder/: index.html
